<resources>
    <string name="app_name">HelpMate</string>
    <string name="password">Hasło</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="email">E-mail</string>
    <string name="action_settings">Setting</string>
    <string name="login">Zaloguj</string>
    <string name="register">Zarejestruj</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="sign_up">Utwórz konto</string>
    <string name="remind_password"><u>Nie pamiętasz hasła?</u></string>
    <string name="description">Wszystkie usługi domowe w jednym miejscu</string>
    <string name="withoutLogin"><u>KONTYNUUJ BEZ LOGOWANIA</u></string>
    <string name="withoutLoginOr">LUB</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="orConnectWith">zaloguj się przez</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="remind_password_email">Wpisz poniżej adres e-mail podany przy rejestracji, na który zostanie wysłany link resetujący hasło.</string>
    <string name="remind_password_confirm">Zatwierdź</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_single_user_test">SingleUserTest</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="description_user">Wykonuję wszelkiego rodzaju usługi z podanej kategorii.</string>
    <string name="opinion1">Szybko, tanio i bezproblemowo. Z takimi ludźmi aż chce się robić interesy. Polecam!</string>
    <string name="user_name">Imię i nazwisko lub nazwa firmy</string>
    <string name="user_address">Adres</string>
    <string name="phone_number">Numer telefonu</string>
    <string name="user_category">Usługi, które oferujesz:</string>
    <string name="user_category_all">Oferowane usługi</string>
    <string name="user_edit_button">Edytuj profil</string>
    <string name="user_image_edit">Edytuj</string>
    <string name="image_edit">Edytuj\nzdjęcie</string>
    <string name="user_name_edit">Imię i nazwisko</string>
    <string name="user_phone_edit">Numer telefonu</string>
    <string name="user_category_edit">Wybierz usługi, które oferujesz:</string>
    <string name="user_profile_edit">Zatwierdź zmiany</string>
    <string name="add_comment_confirm">Wyślij</string>
    <string name="add_comment">Wpisz swoją opinię...</string>
    <string name="add_comment_button">Dodaj opinię</string>
    <string name="title_activity_maps">Map</string>
    <string name="services_plumber">Hydraulika</string>
    <string name="services_electricity">Elektryka</string>
    <string name="services_cleaning">Pomoc \ndomowa</string>
    <string name="services_caring">Opieka</string>
    <string name="services_learning">Pomoc \nnaukowa</string>
    <string name="services_repairs">Naprawa \nurządzeń</string>
    <string name="services_painting">Remonty</string>
    <string name="services_other">Inne</string>
    <string name="services_gardening">Ogrodnictwo</string>
    <string name="hydraulika">Hydraulika</string>
    <string name="elektryka">Elektryka</string>
    <string name="pomoc_domowa">Pomoc domowa</string>
    <string name="opieka">Opieka</string>
    <string name="pomoc_naukowa">Pomoc naukowa</string>
    <string name="naprawa_urzadzen">Naprawa urządzeń</string>
    <string name="remonty">Remonty</string>
    <string name="inne">Inne</string>
    <string name="ogrodnictwo">Ogrodnictwo</string>
    <string name="hydraulika_naprawa">naprawa wycieków</string>
    <string name="hydraulika_wymiana">wymiana armatury</string>
    <string name="elektryka_instalacje">instalacje elektryczne</string>
    <string name="elektryka_naprawa">naprawa awaryjna</string>
    <string name="domowe_sprzatanie">sprzątanie</string>
    <string name="domowe_prasowanie">prasowanie</string>
    <string name="domowe_mycie_okien">mycie okien</string>
    <string name="opieka_dzieci">opieka do dzieci</string>
    <string name="opieka_starsi">opieka do osób starszych</string>
    <string name="opieka_niepelnosprawni">opieka dzieci i osób niepełnosprawnych</string>
    <string name="opieka_zwierzęta">wyprowadzanie zwierząt</string>
    <string name="naukowa_korepetycje">korepetycje</string>
    <string name="ogrodnictwo_pielegnacja">pielęgnacja ogrodu</string>
    <string name="ogrodnictwo_koszenie">koszenie trawy</string>
    <string name="ogrodnictwo_porzadkowe">prace porządkowe</string>
    <string name="naprawa_drobne_agd">naprawa drobnego AGD</string>
    <string name="naprawa_agd">naprawa AGD</string>
    <string name="naprawa_rtv">naprawa RTV</string>
    <string name="naprawa_komputerow">naprawa komputerów/laptopów</string>
    <string name="remonty_malowanie">malowanie</string>
    <string name="remonty_tapetowanie">tapetowanie</string>
    <string name="remonty_panele">kładzenie paneli podłogowych</string>
    <string name="remonty_kafelki">kładzenie kafelek</string>
    <string name="inne_uslugi">inne usługi</string>
    <string name="category_text">Szukaj według kategorii</string>
    <string name="imie_nazwisko"></string>
    <string name="dodaj_usun_uslugi">Dodaj/usuń usługi</string>
    <string name="oferowane_uslugi">Oferowane usługi:</string>
    <string name="sort">Sortuj według: </string>
    <string name="about_me">O mnie</string>
    <string name="contact">Kontakt</string>
    <string name="user_decription">Opis</string>
    <string name="location">Lokalizacja</string>
    <string name="termins">Terminarz</string>
    <string-array name="spinner_simple_array">
        <item>Ocena</item>
        <item>Nazwa</item>
    </string-array>
    <string name="monday">Poniedziałek</string>
    <string name="tueasday">Wtorek</string>
    <string name="wednesday">Środa</string>
    <string name="tuesday">Czwartek</string>
    <string name="friday">Piątek</string>
    <string name="saturday">Sobota</string>
    <string name="sunday">Niedziela</string>
    <string name="from">Od: </string>
    <string name="to"> do: </string>
    <string-array name="hydraulika">
        <item>Naprawa wycieków</item>
        <item>Wymiana armatury</item>
    </string-array>
    <string-array name="elektryka">
        <item>Instalacje elektryczne</item>
        <item>Naprawa awaryjna</item>
    </string-array>
    <string-array name="pomoc_domowa">
        <item>Sprzątanie</item>
        <item>Prasowanie</item>
        <item>Mycie okien</item>
    </string-array>
    <string-array name="opieka">
        <item>Opieka do dzieci</item>
        <item>Opieka do osób starszych</item>
        <item>Opieka dzieci i osób niepełnosprawnych</item>
        <item>Wyprowadzanie zwierząt</item>
    </string-array>
    <string-array name="pomoc_naukowa">
        <item>Korepetycje</item>
    </string-array>
    <string-array name="ogrodnictwo">
        <item>Pielęgnacja ogrodu</item>
        <item>Koszenie trawy</item>
        <item>Prace porządkowe</item>
    </string-array>
    <string-array name="naprawa_urzadzen">
        <item>Naprawa drobnego AGD</item>
        <item>Naprawa AGD</item>
        <item>Naprawa RTV</item>
        <item>Naprawa komputerów/laptopów</item>
    </string-array>
    <string-array name="remonty">
        <item>Malowanie</item>
        <item>Tapetowanie</item>
        <item>Kładzenie kafelek</item>
        <item>Kładzenie paneli podłogowych</item>
    </string-array>
    <string name="cancel">Anuluj</string>
    <string name="confirm">Tak</string>
    <string name="save">Zapisz</string>
    <string name="description_hint">Poniżej możesz zamieścić krótki opis na temat swoich usług</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="add_me">Zaktualizuj wprowadzone informacje</string>
    <string name="info_pop">To jest podgląd Twojego profilu wykonawcy. Możesz edytować dowolne elementy zawierające informacje o Twoich usługach. Koniecznie wybierz usługi, które oferujesz oraz wypełnij pole <i>Kontakt</i>.\nPo kliknięciu przycisku <i>Zaktualizuj wprowadzone informacje</i>, dane widoczne dla użytkowników zostaną zaktualizowane. </string>
    <string name="user_services_list">Użytkownik nie dodał jeszcze żadnych usług.</string>
    <string name="user_services_description">Użytkownik nie dodał opisu.</string>
    <string name="user_rate">Wystaw ocenę w skali od 1 do 5</string>
    <string name="user_opinion">Napisz opinię o użytkowniku</string>
    <string name="user_location">Zatwierdź lokalizację</string>
    <string name="user_settings_delete">Usuń konto</string>
    <string name="user_settings_email">Zmień adres e-mail</string>
    <string name="user_settings_password">Zmień hasło</string>
    <string name="user_setting_delete_button">Usuń konto</string>
    <string name="user_settings_edit">Zatwierdź</string>
    <string name="user_setting_password_info">Poniżej wpisz swoje nowe hasło</string>
    <string name="user_setting_email_info">Poniżej wpisz swój nowy adres e-mail</string>
    <string name="user_setting_delete_info">Usunięcie konta jest nieodwracalne</string>
    <string name="title_activity_category_tabeed_test">CategoryTabeedTest</string>


</resources>
