<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_categories_choice"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.verunex.helpmate.CategoriesChoice">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hydraulika"
            android:id="@+id/textViewHydraulika"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="30dp"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hydraulika_naprawa"
            android:id="@+id/sub1"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hydraulika_wymiana"
            android:id="@+id/sub2"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elektryka"
            android:id="@+id/textViewElektryka"
            android:textSize="20dp"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="30dp"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elektryka_instalacje"
            android:id="@+id/sub3"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elektryka_naprawa"
            android:id="@+id/sub4"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pomoc_domowa"
            android:id="@+id/textViewDomowe"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="30dp"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domowe_sprzatanie"
            android:id="@+id/sub5"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domowe_prasowanie"
            android:id="@+id/sub6"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domowe_mycie_okien"
            android:id="@+id/sub7"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:layout_alignParentStart="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opieka"
            android:layout_marginTop="10dp"
            android:id="@+id/textViewOpieka"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="30dp"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opieka_dzieci"
            android:id="@+id/sub8"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opieka_starsi"
            android:id="@+id/sub9"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opieka_niepelnosprawni"
            android:id="@+id/sub10"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opieka_zwierzęta"
            android:id="@+id/sub11"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:id="@+id/textViewNaukowa"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="30dp"
            android:textColor="@color/colorAccent"
            android:text="@string/pomoc_naukowa"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naukowa_korepetycje"
            android:id="@+id/sub12"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewOgrodnictwo"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="30dp"
            android:textColor="@color/colorAccent"
            android:text="@string/ogrodnictwo"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ogrodnictwo_koszenie"
            android:id="@+id/sub13"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ogrodnictwo_porzadkowe"
            android:id="@+id/sub14"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ogrodnictwo_pielegnacja"
            android:id="@+id/sub15"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/naprawa_urzadzen"
            android:id="@+id/textViewNaprawa"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="30dp"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naprawa_drobne_agd"
            android:id="@+id/sub16"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naprawa_agd"
            android:id="@+id/sub17"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naprawa_rtv"
            android:id="@+id/sub18"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naprawa_komputerow"
            android:id="@+id/sub19"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remonty"
            android:id="@+id/textViewRemonty"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="30dp"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remonty_malowanie"
            android:id="@+id/sub20"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remonty_tapetowanie"
            android:id="@+id/sub21"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remonty_kafelki"
            android:id="@+id/sub22"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remonty_panele"
            android:id="@+id/sub23"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewInne"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="30dp"
            android:textColor="@color/colorAccent"
            android:text="@string/inne"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inneUslugi"
            android:text="@string/inne_uslugi"
            android:button="@null"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            />

    </LinearLayout>

    <Button
        android:text="@string/remind_password_confirm"
        android:textColor="@color/colorTextIcons"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/acceptCategories"
        android:background="@drawable/button_rounded_corners"
        android:layout_width="160dp" />

</LinearLayout>
</ScrollView>
