<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:background="@drawable/border"
        android:elevation="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_settings_email"
            android:textSize="16dp"
            android:textAllCaps="true"
            android:textColor="@color/darkGrey"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_setting_email_info"
            android:textColor="@color/colorTextGrey"
            android:layout_marginTop="5dp"
            android:textSize="15dp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:id="@+id/userChangeEmail"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_settings_edit"
            android:background="@drawable/ripple_effect"
            android:textAlignment="center"
            android:layout_gravity="end"
            android:textColor="@color/colorTextGrey"
            android:id="@+id/userChangeEmailButton" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:background="@drawable/border"
        android:elevation="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_settings_password"
            android:textSize="16dp"
            android:textColor="@color/darkGrey"
            android:textAllCaps="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_setting_password_info"
            android:textColor="@color/colorTextGrey"
            android:layout_marginTop="5dp"
            android:textSize="15dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:id="@+id/userChangePassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_settings_edit"
            android:background="@drawable/ripple_effect"
            android:textAlignment="center"
            android:layout_gravity="end"
            android:textColor="@color/colorTextGrey"
            android:id="@+id/userChangePasswordButton" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:background="@drawable/border"
        android:elevation="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_settings_delete"
            android:textSize="16dp"
            android:textColor="@color/darkGrey"
            android:textAllCaps="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_setting_delete_info"
            android:textColor="@color/colorTextGrey"
            android:layout_marginTop="5dp"
            android:textSize="15dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_setting_delete_button"
            android:background="@drawable/ripple_effect"
            android:textAlignment="center"
            android:layout_gravity="end"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:textColor="@color/colorTextGrey"
            android:id="@+id/DeleteAccountButton" />

    </LinearLayout>

</LinearLayout>