<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.verunex.helpmate.LoginActivity">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registerEmailAddress"
            android:hint="@string/email"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorTextPrimary"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageLock"
            android:layout_marginStart="0dp" />

        <EditText
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registerPassword"
            android:hint="@string/password"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorTextPrimary"
            android:layout_weight="1"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/registerEmailAddress"
            android:layout_alignStart="@+id/registerEmailAddress" />

        <ImageView
            android:layout_width="42dp"
            android:src="@drawable/ic_mail_outline"
            android:id="@+id/imageMail"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="-5dp"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:id="@+id/registerRepeatPassword"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorTextPrimary"
            android:layout_weight="1"
            android:layout_below="@+id/registerPassword"
            android:layout_marginTop="11dp"
            android:layout_alignStart="@+id/registerPassword"
            android:layout_alignEnd="@+id/registerPassword" />

        <ImageView
            android:src="@drawable/ic_lock_outline"
            android:id="@+id/imageLock"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginLeft="-5dp"
            android:layout_alignTop="@+id/registerPassword"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="42dp"
            android:src="@drawable/ic_lock_outline"
            android:id="@+id/imageLock2"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/registerPassword"
            android:layout_alignStart="@+id/imageMail" />

        <Button
            android:text="@string/register"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_rounded_corners"
            android:textColor="@color/colorTextIcons"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_height="30dp"
            android:id="@+id/buttonSignUp"
            android:layout_width="180dp"
            android:layout_below="@+id/registerRepeatPassword"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

</FrameLayout>
